<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.novaksoftworks.oneapp.Starting"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/Descript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Start_Description"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/Websites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:text="@string/websites"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/websites"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TableLayout
        android:id="@+id/websites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Descript"
        app:layout_constraintVertical_bias="0.253"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/netweb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:linksClickable="true"
                android:onClick="netweb"
                android:text="@string/novak_network_website"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteX="729dp"
                tools:layout_editor_absoluteY="-338dp" />

            <Button
                android:id="@+id/softweb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:onClick="softweb"
                android:text="@string/novak_softworks_website"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="94dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/serverweb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:onClick="serverweb"
                android:text="@string/novak_server_website"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/webweb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:onClick="webweb"
                android:text="@string/novak_web_website"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/comingsoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/temp_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/websites"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
